fixed overflow-x on width <560px

--- a/css/main.scss
+++ b/css/main.scss
@@ -104,7 +104,7 @@ body {
 	background: $color-white;
 	border-radius: 15px;
 	padding: 50px;
-	margin: 15px;
+	margin: 15px 0;
 
 	.about-picture {
 		padding-bottom: 20px;
